fixed overlapping section issue. NOTE: be careful about setting height to 100vh

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
-
+/* TODO remove duplicate css attributes in all files and add them here */
 #root {
     margin: 0;
     padding: 0 4rem 0 10rem;
@@ -18,7 +18,6 @@ body{
 section{
     /* TODO fix overlapping sections */
     width: 100%;
-    height: 100vh;
     display: flex;
     margin-top: 6rem;
     flex-direction: column;
@@ -26,10 +25,10 @@ section{
     z-index: 1;
 
 }
-
 /* TODO reduce size at 1200px */
 p{
     font-family: Jura;
 }
+
 
 
